--- a/tarea2.Rmd
+++ b/tarea2.Rmd
@@ -48,7 +48,7 @@ kableExtra::kable(tabla) %>%
 ## Herramienta de marcaje de tiros
 
 
-Para la realización de este ejercicio se creó una aplicación 100% con código R con el paquete **[shiny](https://shiny.rstudio.com/)** para marcar la posición junto con el tipo de tiro, para generar automáticamente la probabilidad de parada según esta información. Esta aplicación está disponible para su uso libre en <https://telaroz.shinyapps.io/colaborativa2/> y es posible generalizarla a equipos y jugadores de en distintos contextos. El código fuente de esta aplicación está alojado en este **[repositorio](https://github.com/telaroz/colaborativa2/)** (escrito en su totalidad en el lenguaje de programación R) y la misma aplicación puede correr en una versión local. Debido a las limitaciones del servidor donde está alojada la aplicación, se recomienda esta opción. En el **[anexo](https://telaroz.github.io/colaborativa2#anexo))** se explica de manera básica cómo ejecutar esta aplicación en RStudio.  
+Para la realización de este ejercicio se creó una aplicación 100% con código R con el paquete **[shiny](https://shiny.rstudio.com/)** para marcar la posición junto con el tipo de tiro, para generar automáticamente la probabilidad de parada según esta información. Esta aplicación está disponible para su uso libre en <https://telaroz.shinyapps.io/colaborativa2/> y es posible generalizarla a equipos y jugadores de en distintos contextos. El código fuente de esta aplicación está alojado en este **[repositorio](https://github.com/telaroz/colaborativa2/)** (escrito en su totalidad en el lenguaje de programación R) y la misma aplicación puede correr en una versión local. Debido a las limitaciones del servidor donde está alojada la aplicación, se recomienda esta opción. En el **[anexo](https://telaroz.github.io/colaborativa2#anexo)** se explica de manera básica cómo ejecutar esta aplicación en RStudio.  
 
 
 ## Solución primeros 10 tiros. 
